2004/01/21 14:57 (-0500) rwmcfa1

	* MakeHelper.pm: we need to create the directory in which index.pod will
	be placed under certian circumstances. this doesn't affect any of 
	Gtk2-Perl, but some modules (with certian structures) will cause 
	problems that creating the directory if need be will address.

2004/01/16 18:38 (-0500) rwmcfa1

	* typemap: added types for gshort and gushort, patch by kaffee

2004/01/16 11:09 (-0500) rwmcfa1

	* MakeHelper.pm: BLIB_MOD_EXIST -> BLIB_DONE. and set equal to something
	that 'seems' to ensure that blib has completed. fixes -j make build 
	problems.

2004/01/16 00:23 (-0500) muppetman

	* README: unstable release 1.030

	* README, Makefile.PL: add emphasis of the unstable nature of this series.

2004/01/16 00:02 (-0500) muppetman

	A GUtils.xs
	* MANIFEST, Makefile.PL, Glib.xs: add GUtils.xs, with version information
	functions.

	* ParseXSDoc.pm: don't complain about empty argument lists -- they are
	legal on pure functions.

	* AUTHORS: updated.

2004/01/15 22:08 (-0500) muppetman

	* Glib.xs, Glib.pm: restore the prototypes on filename_to_unicode and
	filename_from_unicode, to allow proper support for the function and static
	method calling conventions.  thanks to cxreg in irc for reminding me that
	it would work.
		also add initial implementations of filename_to_uri and
	filename_from_uri, also callable as pure functions and class methods.
	as currently implemented, there are issues with utf8 handling, but i don't
	quite know how to resolve them.
		make Glib be a full Exporter, so we can add these pure functions
	to @EXPORT_OK and %EXPORT_TAGS.
		update the docs accordingly.

2004/01/15 14:31 (-0500) muppetman

	* GenPod.pm: name mapping for GPerlFilename_const

	* gperl.h, typemap: add typedef and input typemap for
	GPerlFilename_ornull

	* GType.xs, gperl_marshal.h, t/7.t, t/8.t: preserve $@ across
	closure invocations.

	* GSignal.xs: add words of warning to documentation

2004/01/14 10:59 (-0500) rwmcfa1
